updated notebook, added csv with scraped data

--- a/heidisandbox/Scrape - Download - Scrape.ipynb
+++ b/heidisandbox/Scrape - Download - Scrape.ipynb
@@ -11,7 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get individual rental ad  URLs"
+    "### Get individual rental ad  URLs\n",
+    "Pagination is done using the 'offset' property in the search results URL, so we can use that browse through the results pages.  \n",
+    "Daft displays 20 results per page, hence the value of '20' in this line:\n",
+    "       `for offset in range(0, number_of_adds, 20):`\n",
+    "    "
    ]
   },
   {
@@ -60,7 +64,9 @@
     "collapsed": true
    },
    "source": [
-    "### Download individual Ad pages"
+    "### Download individual Ad pages\n",
+    "\n",
+    "This section loops through the list of individual rental ad URLs, and downloads them into a 'daftpages' directory.  "
    ]
   },
   {
@@ -85,15 +91,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tarfile\n",
+    "import datetime\n",
     "import os\n",
     "\n",
+    "current_date = datetime.datetime.now().isoformat()\n",
+    "tar_file_name = 'daftpages_' + current_date + '.tar'\n",
     "source_dir = 'daftpages/'\n",
-    "with tarfile.open('daftpages.tar', \"w:gz\") as tar:\n",
+    "with tarfile.open(tar_file_name, \"w:gz\") as tar:\n",
     "    tar.add(source_dir, arcname=os.path.basename(source_dir))"
    ]
   },
@@ -106,13 +115,383 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "issue reading in page daftpages/daft_ad_26.html\n",
+      "issue reading in page daftpages/daft_ad_102.html\n",
+      "issue reading in page daftpages/daft_ad_164.html\n",
+      "issue reading in page daftpages/daft_ad_168.html\n",
+      "issue reading in page daftpages/daft_ad_173.html\n",
+      "issue reading in page daftpages/daft_ad_180.html\n",
+      "issue reading in page daftpages/daft_ad_181.html\n",
+      "issue reading in page daftpages/daft_ad_182.html\n",
+      "issue reading in page daftpages/daft_ad_259.html\n",
+      "issue reading in page daftpages/daft_ad_353.html\n",
+      "issue reading in page daftpages/daft_ad_400.html\n",
+      "issue reading in page daftpages/daft_ad_508.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "import json\n",
+    "import csv\n",
+    "\n",
+    "\n",
+    "num_of_rows = 639 #number_of_adds\n",
+    "data_csv = 'data/scraped_data.csv'\n",
+    "all_field_names = [\n",
+    "    'property_id',\n",
+    "    'property_category',\n",
+    "    'property_title',\n",
+    "    'property_type',\n",
+    "    'seller_name',\n",
+    "    'seller_id',\n",
+    "    'seller_type',\n",
+    "    'open_viewing',\n",
+    "    'no_of_photos',\n",
+    "    'available_from',\n",
+    "    'lease_units',\n",
+    "    'available_for',    \n",
+    "    'area',\n",
+    "    'county',\n",
+    "    'latitude',\n",
+    "    'longitude',    \n",
+    "    'furnished',\n",
+    "    'bathrooms',   \n",
+    "    'beds',   \n",
+    "    'facility',    \n",
+    "    'environment',\n",
+    "    'published_date',\n",
+    "    'page_name',\n",
+    "    'platform',\n",
+    "    'currency',\n",
+    "    'price_frequency',\n",
+    "    'price'\n",
+    "]\n",
+    "\n",
+    "with open(data_csv, 'w') as csvfile:\n",
+    "    for idx in range(num_of_rows):\n",
+    "        try:\n",
+    "            adpage_html = open('daftpages/daft_ad_' + str(idx) + '.html').read()\n",
+    "            soup = BeautifulSoup(adpage_html, \"html5lib\")\n",
+    "        except:\n",
+    "            # seems like some pages have encoding issues?\n",
+    "            print('issue reading in page daftpages/daft_ad_' + str(idx) + '.html. Skipping this Ad.')\n",
+    "            continue\n",
+    "\n",
+    "        #print(soup)\n",
+    "        # There is a handy javascrupt json dictionary on those daft pages, listing key features of the add\n",
+    "        # To get this data, find all script tags, then get the contents of the 10ths tag found (seems to be the 10th.\n",
+    "        # Now, this seems to be a bit brittle, need to find a way to target this better than just hope it'll always be \n",
+    "        # the 10th script tag on the page; But maybe for now it's enough)\n",
+    "        scriptdata = soup.find_all('script', type='text/javascript')    \n",
+    "        trackingparams = scriptdata[10].get_text()\n",
+    "        trackingparams = trackingparams.replace('\\u20ac','')\n",
+    "\n",
+    "        try:\n",
+    "            feature_str = \"{\" + str(re.search('\\\\{(.+?)\\\\}', trackingparams).group(1)) + \"}\"\n",
+    "        except AttributeError:\n",
+    "            feature_str = \"{}\"\n",
+    "    \n",
+    "        ad_data = json.loads(feature_str)      \n",
+    "        # check for missing fields (mostly seller_id and seller_name), and add them with empty vals if required\n",
+    "        missing_fiels = set(all_field_names) - set(field_names)\n",
+    "        for missing in missing_fiels:\n",
+    "            ad_data[missing] = \"\"\n",
+    "            \n",
+    "        writer = csv.DictWriter(csvfile, fieldnames=all_field_names)\n",
+    "        if idx == 0: \n",
+    "            writer.writeheader()\n",
+    "        writer.writerow(ad_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Add code"
+    "### Create Pandas Dataframe from CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>property_id</th>\n",
+       "      <th>property_title</th>\n",
+       "      <th>property_type</th>\n",
+       "      <th>seller_name</th>\n",
+       "      <th>seller_id</th>\n",
+       "      <th>seller_type</th>\n",
+       "      <th>open_viewing</th>\n",
+       "      <th>no_of_photos</th>\n",
+       "      <th>available_from</th>\n",
+       "      <th>lease_units</th>\n",
+       "      <th>...</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>furnished</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>beds</th>\n",
+       "      <th>facility</th>\n",
+       "      <th>published_date</th>\n",
+       "      <th>currency</th>\n",
+       "      <th>price_frequency</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1770917</td>\n",
+       "      <td>River Park, Conyngham Road, Dublin 8, Dublin 8</td>\n",
+       "      <td>apartment</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>private</td>\n",
+       "      <td>no</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2017-09-11</td>\n",
+       "      <td>months</td>\n",
+       "      <td>...</td>\n",
+       "      <td>53.348092</td>\n",
+       "      <td>-6.302529</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Parking,Central Heating,Cable Television,Washi...</td>\n",
+       "      <td>2017-09-10</td>\n",
+       "      <td>€</td>\n",
+       "      <td>monthly</td>\n",
+       "      <td>1575</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1771948</td>\n",
+       "      <td>Temple Hill, Terenure Road West, Terenure, Dub...</td>\n",
+       "      <td>apartment</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>private</td>\n",
+       "      <td>no</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2017-09-13</td>\n",
+       "      <td>months</td>\n",
+       "      <td>...</td>\n",
+       "      <td>53.311233</td>\n",
+       "      <td>-6.291145</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Parking,Central Heating,House Alarm,Cable Tele...</td>\n",
+       "      <td>2017-09-10</td>\n",
+       "      <td>€</td>\n",
+       "      <td>monthly</td>\n",
+       "      <td>1950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1770493</td>\n",
+       "      <td>rosebank view, Clondalkin, Dublin 22</td>\n",
+       "      <td>apartment</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>private</td>\n",
+       "      <td>no</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2017-09-09</td>\n",
+       "      <td>months</td>\n",
+       "      <td>...</td>\n",
+       "      <td>53.328208</td>\n",
+       "      <td>-6.395234</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Parking,Central Heating,House Alarm,Cable Tele...</td>\n",
+       "      <td>2017-09-10</td>\n",
+       "      <td>€</td>\n",
+       "      <td>monthly</td>\n",
+       "      <td>1200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1762956</td>\n",
+       "      <td>Wavendon, 69 Northumberland Road, Ballsbridge,...</td>\n",
+       "      <td>apartment</td>\n",
+       "      <td>MD Property Management</td>\n",
+       "      <td>6534.0</td>\n",
+       "      <td>agent</td>\n",
+       "      <td>no</td>\n",
+       "      <td>23</td>\n",
+       "      <td>2017-09-08</td>\n",
+       "      <td>months</td>\n",
+       "      <td>...</td>\n",
+       "      <td>53.333177</td>\n",
+       "      <td>-6.236485</td>\n",
+       "      <td>either</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Parking,Central Heating,Washing Machine,Dishwa...</td>\n",
+       "      <td>2017-09-10</td>\n",
+       "      <td>€</td>\n",
+       "      <td>monthly</td>\n",
+       "      <td>3500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1762953</td>\n",
+       "      <td>New Bancroft, Greenhills Road, Tallaght, Dubli...</td>\n",
+       "      <td>apartment</td>\n",
+       "      <td>MD Property Management</td>\n",
+       "      <td>6534.0</td>\n",
+       "      <td>agent</td>\n",
+       "      <td>no</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2017-09-29</td>\n",
+       "      <td>months</td>\n",
+       "      <td>...</td>\n",
+       "      <td>53.287775</td>\n",
+       "      <td>-6.357701</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Central Heating,Washing Machine,Dryer,Dishwash...</td>\n",
+       "      <td>2017-09-10</td>\n",
+       "      <td>€</td>\n",
+       "      <td>monthly</td>\n",
+       "      <td>1600</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   property_id                                     property_title  \\\n",
+       "0      1770917     River Park, Conyngham Road, Dublin 8, Dublin 8   \n",
+       "1      1771948  Temple Hill, Terenure Road West, Terenure, Dub...   \n",
+       "2      1770493               rosebank view, Clondalkin, Dublin 22   \n",
+       "3      1762956  Wavendon, 69 Northumberland Road, Ballsbridge,...   \n",
+       "4      1762953  New Bancroft, Greenhills Road, Tallaght, Dubli...   \n",
+       "\n",
+       "  property_type             seller_name  seller_id seller_type open_viewing  \\\n",
+       "0     apartment                     NaN        NaN     private           no   \n",
+       "1     apartment                     NaN        NaN     private           no   \n",
+       "2     apartment                     NaN        NaN     private           no   \n",
+       "3     apartment  MD Property Management     6534.0       agent           no   \n",
+       "4     apartment  MD Property Management     6534.0       agent           no   \n",
+       "\n",
+       "   no_of_photos available_from lease_units  ...    latitude longitude  \\\n",
+       "0             7     2017-09-11      months  ...   53.348092 -6.302529   \n",
+       "1             7     2017-09-13      months  ...   53.311233 -6.291145   \n",
+       "2            10     2017-09-09      months  ...   53.328208 -6.395234   \n",
+       "3            23     2017-09-08      months  ...   53.333177 -6.236485   \n",
+       "4            13     2017-09-29      months  ...   53.287775 -6.357701   \n",
+       "\n",
+       "  furnished  bathrooms  beds  \\\n",
+       "0       yes          1     1   \n",
+       "1       yes          2     2   \n",
+       "2       yes          1     1   \n",
+       "3    either          2     2   \n",
+       "4       yes          2     2   \n",
+       "\n",
+       "                                            facility  published_date  \\\n",
+       "0  Parking,Central Heating,Cable Television,Washi...      2017-09-10   \n",
+       "1  Parking,Central Heating,House Alarm,Cable Tele...      2017-09-10   \n",
+       "2  Parking,Central Heating,House Alarm,Cable Tele...      2017-09-10   \n",
+       "3  Parking,Central Heating,Washing Machine,Dishwa...      2017-09-10   \n",
+       "4  Central Heating,Washing Machine,Dryer,Dishwash...      2017-09-10   \n",
+       "\n",
+       "   currency price_frequency price  \n",
+       "0         €         monthly  1575  \n",
+       "1         €         monthly  1950  \n",
+       "2         €         monthly  1200  \n",
+       "3         €         monthly  3500  \n",
+       "4         €         monthly  1600  \n",
+       "\n",
+       "[5 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "data_csv = 'data/scraped_data.csv'\n",
+    "df = pd.read_csv(data_csv)\n",
+    "\n",
+    "#drop some not very useful columns\n",
+    "df = df.drop('environment', 1)\n",
+    "df = df.drop('page_name', 1)\n",
+    "df = df.drop('platform', 1)\n",
+    "df = df.drop('property_category', 1)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 627 entries, 0 to 626\n",
+      "Data columns (total 23 columns):\n",
+      "property_id        627 non-null int64\n",
+      "property_title     627 non-null object\n",
+      "property_type      627 non-null object\n",
+      "seller_name        473 non-null object\n",
+      "seller_id          473 non-null float64\n",
+      "seller_type        627 non-null object\n",
+      "open_viewing       627 non-null object\n",
+      "no_of_photos       627 non-null int64\n",
+      "available_from     627 non-null object\n",
+      "lease_units        627 non-null object\n",
+      "available_for      627 non-null int64\n",
+      "area               627 non-null object\n",
+      "county             627 non-null object\n",
+      "latitude           627 non-null float64\n",
+      "longitude          627 non-null float64\n",
+      "furnished          627 non-null object\n",
+      "bathrooms          627 non-null int64\n",
+      "beds               627 non-null int64\n",
+      "facility           587 non-null object\n",
+      "published_date     627 non-null object\n",
+      "currency           627 non-null object\n",
+      "price_frequency    627 non-null object\n",
+      "price              627 non-null int64\n",
+      "dtypes: float64(3), int64(6), object(14)\n",
+      "memory usage: 112.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
    ]
   },
   {
