--- a/heidisandbox/Scrape - Download - Scrape.ipynb
+++ b/heidisandbox/Scrape - Download - Scrape.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -29,7 +29,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current number of Dublin rental ads: 639\n"
+      "Current number of Dublin rental ads: 634\n"
      ]
     }
    ],
@@ -55,7 +55,8 @@
     "    allAdUrls = allAdUrls + getAdUrls(results)\n",
     "\n",
     "#print(allAdUrls)\n",
-    "print('Current number of Dublin rental ads: ' + str(len(allAdUrls)))\n"
+    "print('Current number of Dublin rental ads: ' + str(len(allAdUrls)))\n",
+    "number_of_adds = len(allAdUrls)\n"
    ]
   },
   {
@@ -66,12 +67,14 @@
    "source": [
     "### Download individual Ad pages\n",
     "\n",
-    "This section loops through the list of individual rental ad URLs, and downloads them into a 'daftpages' directory.  "
+    "This section loops through the list of individual rental ad URLs, and downloads them into a 'daftpages' directory. \n",
+    "\n",
+    "#### Skip if you download and extract the zipped/tared archive instead"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,28 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "issue reading in page daftpages/daft_ad_26.html\n",
-      "issue reading in page daftpages/daft_ad_102.html\n",
-      "issue reading in page daftpages/daft_ad_164.html\n",
-      "issue reading in page daftpages/daft_ad_168.html\n",
-      "issue reading in page daftpages/daft_ad_173.html\n",
-      "issue reading in page daftpages/daft_ad_180.html\n",
-      "issue reading in page daftpages/daft_ad_181.html\n",
-      "issue reading in page daftpages/daft_ad_182.html\n",
-      "issue reading in page daftpages/daft_ad_259.html\n",
-      "issue reading in page daftpages/daft_ad_353.html\n",
-      "issue reading in page daftpages/daft_ad_400.html\n",
-      "issue reading in page daftpages/daft_ad_508.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import re\n",
@@ -144,9 +128,9 @@
     "import csv\n",
     "\n",
     "\n",
-    "num_of_rows = 639 #number_of_adds\n",
+    "num_of_rows = number_of_adds\n",
     "data_csv = 'data/scraped_data.csv'\n",
-    "all_field_names = [\n",
+    "all_orig_field_names = [\n",
     "    'property_id',\n",
     "    'property_category',\n",
     "    'property_title',\n",
@@ -175,6 +159,22 @@
     "    'price_frequency',\n",
     "    'price'\n",
     "]\n",
+    "all_facilities=[\n",
+    "    'Parking', \n",
+    "    'Cable Television', \n",
+    "    'Dryer', \n",
+    "    'Garden / Patio / Balcony', \n",
+    "    'Washing Machine', \n",
+    "    'Serviced Property', \n",
+    "    'Pets Allowed', \n",
+    "    'Wheelchair Access', \n",
+    "    'Central Heating', \n",
+    "    'Microwave', \n",
+    "    'Smoking', \n",
+    "    'Dishwasher', \n",
+    "    'House Alarm', \n",
+    "    'Internet'\n",
+    "]\n",
     "\n",
     "with open(data_csv, 'w') as csvfile:\n",
     "    for idx in range(num_of_rows):\n",
@@ -200,21 +200,36 @@
     "        except AttributeError:\n",
     "            feature_str = \"{}\"\n",
     "    \n",
-    "        ad_data = json.loads(feature_str)      \n",
+    "        ad_data = json.loads(feature_str)  \n",
+    "        \n",
+    "        field_names = ad_data.keys()\n",
+    "        \n",
+    "        facilities = ad_data['facility'].split(',')\n",
+    "        facilties_dict = dict.fromkeys(all_facilities)\n",
+    "        for facility in facilities:\n",
+    "            if facility in all_facilities:\n",
+    "                facilties_dict[facility] = True\n",
+    " \n",
+    "\n",
     "        # check for missing fields (mostly seller_id and seller_name), and add them with empty vals if required\n",
-    "        missing_fiels = set(all_field_names) - set(field_names)\n",
+    "        missing_fiels = set(all_orig_field_names) - set(field_names)\n",
     "        for missing in missing_fiels:\n",
     "            ad_data[missing] = \"\"\n",
-    "            \n",
+    "        \n",
+    "        ad_data.update(facilties_dict)\n",
+    "        \n",
+    "        all_field_names = all_orig_field_names + all_facilities\n",
+    "        \n",
     "        writer = csv.DictWriter(csvfile, fieldnames=all_field_names)\n",
     "        if idx == 0: \n",
     "            writer.writeheader()\n",
-    "        writer.writerow(ad_data)\n"
+    "        writer.writerow(ad_data)\n",
+    "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -225,217 +240,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>property_id</th>\n",
-       "      <th>property_title</th>\n",
-       "      <th>property_type</th>\n",
-       "      <th>seller_name</th>\n",
-       "      <th>seller_id</th>\n",
-       "      <th>seller_type</th>\n",
-       "      <th>open_viewing</th>\n",
-       "      <th>no_of_photos</th>\n",
-       "      <th>available_from</th>\n",
-       "      <th>lease_units</th>\n",
-       "      <th>...</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>furnished</th>\n",
-       "      <th>bathrooms</th>\n",
-       "      <th>beds</th>\n",
-       "      <th>facility</th>\n",
-       "      <th>published_date</th>\n",
-       "      <th>currency</th>\n",
-       "      <th>price_frequency</th>\n",
-       "      <th>price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1770917</td>\n",
-       "      <td>River Park, Conyngham Road, Dublin 8, Dublin 8</td>\n",
-       "      <td>apartment</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>private</td>\n",
-       "      <td>no</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2017-09-11</td>\n",
-       "      <td>months</td>\n",
-       "      <td>...</td>\n",
-       "      <td>53.348092</td>\n",
-       "      <td>-6.302529</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Parking,Central Heating,Cable Television,Washi...</td>\n",
-       "      <td>2017-09-10</td>\n",
-       "      <td>€</td>\n",
-       "      <td>monthly</td>\n",
-       "      <td>1575</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1771948</td>\n",
-       "      <td>Temple Hill, Terenure Road West, Terenure, Dub...</td>\n",
-       "      <td>apartment</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>private</td>\n",
-       "      <td>no</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2017-09-13</td>\n",
-       "      <td>months</td>\n",
-       "      <td>...</td>\n",
-       "      <td>53.311233</td>\n",
-       "      <td>-6.291145</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Parking,Central Heating,House Alarm,Cable Tele...</td>\n",
-       "      <td>2017-09-10</td>\n",
-       "      <td>€</td>\n",
-       "      <td>monthly</td>\n",
-       "      <td>1950</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1770493</td>\n",
-       "      <td>rosebank view, Clondalkin, Dublin 22</td>\n",
-       "      <td>apartment</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>private</td>\n",
-       "      <td>no</td>\n",
-       "      <td>10</td>\n",
-       "      <td>2017-09-09</td>\n",
-       "      <td>months</td>\n",
-       "      <td>...</td>\n",
-       "      <td>53.328208</td>\n",
-       "      <td>-6.395234</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Parking,Central Heating,House Alarm,Cable Tele...</td>\n",
-       "      <td>2017-09-10</td>\n",
-       "      <td>€</td>\n",
-       "      <td>monthly</td>\n",
-       "      <td>1200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1762956</td>\n",
-       "      <td>Wavendon, 69 Northumberland Road, Ballsbridge,...</td>\n",
-       "      <td>apartment</td>\n",
-       "      <td>MD Property Management</td>\n",
-       "      <td>6534.0</td>\n",
-       "      <td>agent</td>\n",
-       "      <td>no</td>\n",
-       "      <td>23</td>\n",
-       "      <td>2017-09-08</td>\n",
-       "      <td>months</td>\n",
-       "      <td>...</td>\n",
-       "      <td>53.333177</td>\n",
-       "      <td>-6.236485</td>\n",
-       "      <td>either</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Parking,Central Heating,Washing Machine,Dishwa...</td>\n",
-       "      <td>2017-09-10</td>\n",
-       "      <td>€</td>\n",
-       "      <td>monthly</td>\n",
-       "      <td>3500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1762953</td>\n",
-       "      <td>New Bancroft, Greenhills Road, Tallaght, Dubli...</td>\n",
-       "      <td>apartment</td>\n",
-       "      <td>MD Property Management</td>\n",
-       "      <td>6534.0</td>\n",
-       "      <td>agent</td>\n",
-       "      <td>no</td>\n",
-       "      <td>13</td>\n",
-       "      <td>2017-09-29</td>\n",
-       "      <td>months</td>\n",
-       "      <td>...</td>\n",
-       "      <td>53.287775</td>\n",
-       "      <td>-6.357701</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Central Heating,Washing Machine,Dryer,Dishwash...</td>\n",
-       "      <td>2017-09-10</td>\n",
-       "      <td>€</td>\n",
-       "      <td>monthly</td>\n",
-       "      <td>1600</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   property_id                                     property_title  \\\n",
-       "0      1770917     River Park, Conyngham Road, Dublin 8, Dublin 8   \n",
-       "1      1771948  Temple Hill, Terenure Road West, Terenure, Dub...   \n",
-       "2      1770493               rosebank view, Clondalkin, Dublin 22   \n",
-       "3      1762956  Wavendon, 69 Northumberland Road, Ballsbridge,...   \n",
-       "4      1762953  New Bancroft, Greenhills Road, Tallaght, Dubli...   \n",
-       "\n",
-       "  property_type             seller_name  seller_id seller_type open_viewing  \\\n",
-       "0     apartment                     NaN        NaN     private           no   \n",
-       "1     apartment                     NaN        NaN     private           no   \n",
-       "2     apartment                     NaN        NaN     private           no   \n",
-       "3     apartment  MD Property Management     6534.0       agent           no   \n",
-       "4     apartment  MD Property Management     6534.0       agent           no   \n",
-       "\n",
-       "   no_of_photos available_from lease_units  ...    latitude longitude  \\\n",
-       "0             7     2017-09-11      months  ...   53.348092 -6.302529   \n",
-       "1             7     2017-09-13      months  ...   53.311233 -6.291145   \n",
-       "2            10     2017-09-09      months  ...   53.328208 -6.395234   \n",
-       "3            23     2017-09-08      months  ...   53.333177 -6.236485   \n",
-       "4            13     2017-09-29      months  ...   53.287775 -6.357701   \n",
-       "\n",
-       "  furnished  bathrooms  beds  \\\n",
-       "0       yes          1     1   \n",
-       "1       yes          2     2   \n",
-       "2       yes          1     1   \n",
-       "3    either          2     2   \n",
-       "4       yes          2     2   \n",
-       "\n",
-       "                                            facility  published_date  \\\n",
-       "0  Parking,Central Heating,Cable Television,Washi...      2017-09-10   \n",
-       "1  Parking,Central Heating,House Alarm,Cable Tele...      2017-09-10   \n",
-       "2  Parking,Central Heating,House Alarm,Cable Tele...      2017-09-10   \n",
-       "3  Parking,Central Heating,Washing Machine,Dishwa...      2017-09-10   \n",
-       "4  Central Heating,Washing Machine,Dryer,Dishwash...      2017-09-10   \n",
-       "\n",
-       "   currency price_frequency price  \n",
-       "0         €         monthly  1575  \n",
-       "1         €         monthly  1950  \n",
-       "2         €         monthly  1200  \n",
-       "3         €         monthly  3500  \n",
-       "4         €         monthly  1600  \n",
-       "\n",
-       "[5 rows x 23 columns]"
-      ]
-     },
-     "execution_count": 151,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -452,44 +259,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 627 entries, 0 to 626\n",
-      "Data columns (total 23 columns):\n",
-      "property_id        627 non-null int64\n",
-      "property_title     627 non-null object\n",
-      "property_type      627 non-null object\n",
-      "seller_name        473 non-null object\n",
-      "seller_id          473 non-null float64\n",
-      "seller_type        627 non-null object\n",
-      "open_viewing       627 non-null object\n",
-      "no_of_photos       627 non-null int64\n",
-      "available_from     627 non-null object\n",
-      "lease_units        627 non-null object\n",
-      "available_for      627 non-null int64\n",
-      "area               627 non-null object\n",
-      "county             627 non-null object\n",
-      "latitude           627 non-null float64\n",
-      "longitude          627 non-null float64\n",
-      "furnished          627 non-null object\n",
-      "bathrooms          627 non-null int64\n",
-      "beds               627 non-null int64\n",
-      "facility           587 non-null object\n",
-      "published_date     627 non-null object\n",
-      "currency           627 non-null object\n",
-      "price_frequency    627 non-null object\n",
-      "price              627 non-null int64\n",
-      "dtypes: float64(3), int64(6), object(14)\n",
-      "memory usage: 112.7+ KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.info()"
    ]
