added more adds, grouped areas a bit (this shows better price correlation)

--- a/heidisandbox/Scrape - Download - Scrape.ipynb
+++ b/heidisandbox/Scrape - Download - Scrape.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -29,8 +29,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['http://www.daft.ie/dublin/apartments-for-rent/smithfield/block-b-smithfield-market-smithfield-dublin-1773688/', 'http://www.daft.ie/dublin/apartments-for-rent/leopardstown/8-levmoss-hall-the-gallops-leopardstown-dublin-1773642/', 'http://www.daft.ie/dublin/apartments-for-rent/dun-laoghaire/the-pierre-victoria-terrace-dun-laoghaire-dublin-1773601/', 'http://www.daft.ie/dublin/apartments-for-rent/dublin-7/6-stable-lane-off-palmerston-place-dublin-7-dublin-1773646/', 'http://www.daft.ie/dublin/apartments-for-rent/milltown/abbeyfields-milltown-dublin-1773639/', 'http://www.daft.ie/dublin/apartments-for-rent/clondalkin/shalimar-clondalkin-dublin-1773628/', 'http://www.daft.ie/dublin/apartments-for-rent/dublin-2/synge-street-dublin-2-dublin-2-dublin-1773616/', 'http://www.daft.ie/dublin/apartments-for-rent/dublin-1/110-old-distillery-anne-street-north-dublin-1-dublin-1773605/', 'http://www.daft.ie/dublin/apartments-for-rent/dublin-1/bachelors-walk-dublin-1-dublin-1773598/', 'http://www.daft.ie/dublin/apartments-for-rent/ballymun/college-view-silloge-road-ballymun-dublin-1773593/', 'http://www.daft.ie/dublin/apartments-for-rent/balgriffin/burnell-court-balgriffin-dublin-1773589/', 'http://www.daft.ie/dublin/apartments-for-rent/sandyford/kilcross-square-sandyford-dublin-1773579/', 'http://www.daft.ie/dublin/apartments-for-rent/dun-laoghaire/10-clarinda-house-clarinda-park-west-dun-laoghai-dun-laoghaire-dublin-1773577/', 'http://www.daft.ie/dublin/apartments-for-rent/dublin-2/ely-place-upper-dublin-2-dublin-1773573/', 'http://www.daft.ie/dublin/apartments-for-rent/ard-na-greine/the-orchard-greenwood-ard-na-greine-dublin-1773568/', 'http://www.daft.ie/dublin/apartments-for-rent/drumcondra/116-grace-park-manor-drumcondra-dublin-1773564/', 'http://www.daft.ie/dublin/apartments-for-rent/ifsc/block-3-clarion-quay-ifsc-dublin-1773555/', 'http://www.daft.ie/dublin/apartments-for-rent/dublin-4/northumberland-place-lower-grand-canal-street-dublin-4-dublin-1773526/', 'http://www.daft.ie/dublin/apartments-for-rent/inchicore/berrys-close-spa-road-inchicore-dublin-1773510/', 'http://www.daft.ie/dublin/apartments-for-rent/stepaside/mossfield-ballyedmonduff-rd-stepaside-dublin-1773467/', 'http://www.daft.ie/dublin/apartments-for-rent/drumcondra/st-columbas-road-upper-drumcondra-dublin-1773489/', 'http://www.daft.ie/dublin/apartments-for-rent/castleknock/glenesky-square-phoenix-park-racecourse-castleknock-dublin-1773474/', 'http://www.daft.ie/dublin/apartments-for-rent/booterstown/5-lapwing-thornwood-booterstown-avenue-booterstown-dublin-1773463/', 'http://www.daft.ie/dublin/apartments-for-rent/dublin-2/adelaide-square-whitefriair-street-dublin-2-dublin-1773500/', 'http://www.daft.ie/dublin/apartments-for-rent/dublin-2/25-andrews-street-dublin-2-dublin-1773499/', 'http://www.daft.ie/dublin/apartments-for-rent/clontarf/vernon-avenue-clontarf-dublin-3-clontarf-dublin-1773484/', 'http://www.daft.ie/dublin/apartments-for-rent/ashtown/rathbourne-court-rathbourne-ashtown-dublin-1773481/', 'http://www.daft.ie/dublin/apartments-for-rent/dublin-2/alexandra-walk-dublin-2-dublin-1773478/', 'http://www.daft.ie/dublin/apartments-for-rent/castleknock/phoenix-park-way-phoenix-park-racecourse-castleknock-dublin-1773476/', 'http://www.daft.ie/dublin/apartments-for-rent/dublin-8/7-southgate-cork-street-dublin-8-dublin-1773475/', 'http://www.daft.ie/dublin/apartments-for-rent/dublin-2/adelaide-square-dublin-2-dublin-1773471/', 'http://www.daft.ie/dublin/apartments-for-rent/dublin-2/adelaide-square-dublin-2-dublin-1773468/', 'http://www.daft.ie/dublin/apartments-for-rent/dublin-2/alexandra-walk-dublin-2-dublin-1773461/', 'http://www.daft.ie/dublin/apartments-for-rent/inchicore/berrys-close-inchicore-dublin-1773449/', 'http://www.daft.ie/dublin/apartments-for-rent/dublin-2/61-the-corn-exchange-poolbeg-street-dublin-2-dublin-1773450/', 'http://www.daft.ie/dublin/apartments-for-rent/dublin-2/the-northumberlands-love-lane-mount-street-dublin-2-dublin-1773413/', 'http://www.daft.ie/dublin/apartments-for-rent/ballsbridge/lansdowne-wood-lansdowne-road-ballsbridge-dublin-1773422/', 'http://www.daft.ie/dublin/apartments-for-rent/lucan/58-castlegate-cresent-lucan-dublin-1773421/', 'http://www.daft.ie/dublin/apartments-for-rent/ranelagh/appian-way-ranelagh-dublin-1773416/', 'http://www.daft.ie/dublin/apartments-for-rent/dublin-1/dorset-street-lower-dublin-1-dublin-1773300/', 'http://www.daft.ie/dublin/apartments-for-rent/porterstown/woodbrook-porterstown-dublin-1773362/', 'http://www.daft.ie/dublin/apartments-for-rent/portmarnock/122-the-kilns-portmarnock-dublin-1773332/', 'http://www.daft.ie/dublin/apartments-for-rent/balbriggan/castle-mill-apartments-hamlet-lane-balbriggan-dublin-1773364/', 'http://www.daft.ie/dublin/apartments-for-rent/phibsborough/cabra-park-phibsborough-dublin-7-phibsborough-dublin-1773346/', 'http://www.daft.ie/dublin/apartments-for-rent/clontarf/st-davids-court-clontarf-dublin-1773344/', 'http://www.daft.ie/dublin/apartments-for-rent/malahide/ard-na-mara-malahide-dublin-1773331/', 'http://www.daft.ie/dublin/apartments-for-rent/clondalkin/2-bed-coldcut-park-clondalkin-dublin-1773320/', 'http://www.daft.ie/dublin/apartments-for-rent/ballsbridge/74-heytesbury-lane-ballsbridge-dublin-1773317/', 'http://www.daft.ie/dublin/apartments-for-rent/dublin-2/1-palace-street-dublin-2-dublin-1773305/', 'http://www.daft.ie/dublin/apartments-for-rent/stillorgan/belfield-park-stillorgan-dublin-1773289/', 'http://www.daft.ie/dublin/apartments-for-rent/rathmines/acorn-house-seven-oaks-rathmines-dublin-1773272/', 'http://www.daft.ie/dublin/apartments-for-rent/clontarf/seascape-366-clontarf-road-clontarf-clontarf-dublin-1773260/', 'http://www.daft.ie/dublin/apartments-for-rent/rathgar/rathgar-road-rathgar-dublin-1773251/', 'http://www.daft.ie/dublin/apartments-for-rent/rathcoole/main-street-rathcoole-dublin-1773246/', 'http://www.daft.ie/dublin/apartments-for-rent/malahide/38-mountfield-park-malahide-dublin-1773245/', 'http://www.daft.ie/dublin/apartments-for-rent/christchurch/la-rochelle-la-rochelle-lamb-alley-christchurch-dublin-1773237/', 'http://www.daft.ie/dublin/apartments-for-rent/ifsc/achill-house-custom-house-square-ifsc-dublin-1773225/', 'http://www.daft.ie/dublin/apartments-for-rent/kilmainham/bowbridge-kilmainham-dublin-1773222/', 'http://www.daft.ie/dublin/apartments-for-rent/blackrock/the-willows-rock-road-blackrock-dublin-1773220/', 'http://www.daft.ie/dublin/apartments-for-rent/blackrock/galloping-green-apartments-blackrock-dublin-1773189/']\n",
-      "Current number of Dublin rental ads: 60\n"
+      "Current number of Dublin rental ads: 300\n"
      ]
     }
    ],
@@ -40,7 +39,7 @@
     "\n",
     "daftresults_urlroot = 'http://www.daft.ie/dublin/apartments-for-rent/?s%5Bignored_agents%5D%5B0%5D=5732&s%5Bignored_agents%5D%5B1%5D=428&s%5Bignored_agents%5D%5B2%5D=1551&s%5Bsort_by%5D=date&s%5Bsort_type%5D=d&offset='\n",
     "allAdUrls = []\n",
-    "number_of_adds = 50\n",
+    "number_of_adds = 300\n",
     "\n",
     "def getAdUrls(pageresults):\n",
     "    \n",
@@ -55,7 +54,7 @@
     "    results = soup.find_all(\"div\", class_=\"search_result_title_box\")\n",
     "    allAdUrls = allAdUrls + getAdUrls(results)\n",
     "\n",
-    "print(allAdUrls)\n",
+    "#print(allAdUrls)\n",
     "print('Current number of Dublin rental ads: ' + str(len(allAdUrls)))\n",
     "number_of_adds = len(allAdUrls)\n"
    ]
@@ -75,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -98,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -124,13 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "issue reading in page daftpages/26-marlborough-street-dublin-1-dublin-1-dublin-1774504.html. Skipping this Ad.\n",
       "issue reading in page daftpages/cathedral-court-dublin-2-dublin-1771875.html. Skipping this Ad.\n",
       "issue reading in page daftpages/city-gate-st-augustines-st-dublin-8-dublin-1771830.html. Skipping this Ad.\n",
       "issue reading in page daftpages/daft_ad_108.html. Skipping this Ad.\n",
@@ -147,6 +147,7 @@
       "issue reading in page daftpages/daft_ad_503.html. Skipping this Ad.\n",
       "issue reading in page daftpages/marine-court-crofton-road-dunlaoghaire-dun-laoghaire-dublin-1773045.html. Skipping this Ad.\n",
       "issue reading in page daftpages/newcastle-boulevard-newcastle-dublin-1772908.html. Skipping this Ad.\n",
+      "issue reading in page daftpages/saint-mobhi-boithrn-glasnevin-dublin-1774257.html. Skipping this Ad.\n",
       "issue reading in page daftpages/the-plaza-swords-dublin-1772641.html. Skipping this Ad.\n",
       "issue reading in page daftpages/trinity-square-townsend-street-dublin-2-dublin-1772442.html. Skipping this Ad.\n"
      ]
@@ -269,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +385,7 @@
        "      <td>KELLY BRADSHAW DALTON</td>\n",
        "      <td>11.0</td>\n",
        "      <td>agent</td>\n",
-       "      <td>no</td>\n",
+       "      <td>yes</td>\n",
        "      <td>6</td>\n",
        "      <td>2017-09-13</td>\n",
        "      <td>months</td>\n",
@@ -402,23 +403,23 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1773605</td>\n",
-       "      <td>110 Old Distillery, Anne Street North, Dublin ...</td>\n",
+       "      <td>1771138</td>\n",
+       "      <td>11 saunders house, spencer dock, Dublin 1, Dub...</td>\n",
        "      <td>apartment</td>\n",
-       "      <td>Herman White Estates</td>\n",
-       "      <td>181.0</td>\n",
-       "      <td>agent</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>private</td>\n",
        "      <td>no</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2017-09-17</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2017-09-16</td>\n",
        "      <td>months</td>\n",
        "      <td>...</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -435,21 +436,21 @@
        "1      1773305                1 Palace Street, Dublin 2, Dublin 2   \n",
        "2      1773577  10 Clarinda House, Clarinda Park West, Dun Lao...   \n",
        "3      1772865             109 Geraldstown Wood, Santry, Dublin 9   \n",
-       "4      1773605  110 Old Distillery, Anne Street North, Dublin ...   \n",
+       "4      1771138  11 saunders house, spencer dock, Dublin 1, Dub...   \n",
        "\n",
        "  property_type                seller_name  seller_id seller_type  \\\n",
        "0     apartment                       IRES     9871.0       agent   \n",
        "1     apartment  Herbert Property Services     7549.0       agent   \n",
        "2     apartment                        NaN        NaN     private   \n",
        "3     apartment      KELLY BRADSHAW DALTON       11.0       agent   \n",
-       "4     apartment       Herman White Estates      181.0       agent   \n",
+       "4     apartment                        NaN        NaN     private   \n",
        "\n",
        "  open_viewing  no_of_photos available_from lease_units   ...     \\\n",
        "0           no             3     2017-10-01      months   ...      \n",
        "1           no             6     2017-09-15      months   ...      \n",
        "2           no             8     2017-09-18      months   ...      \n",
-       "3           no             6     2017-09-13      months   ...      \n",
-       "4           no            11     2017-09-17      months   ...      \n",
+       "3          yes             6     2017-09-13      months   ...      \n",
+       "4           no            10     2017-09-16      months   ...      \n",
        "\n",
        "   Washing Machine Serviced Property Pets Allowed  Wheelchair Access  \\\n",
        "0             True               NaN          NaN                NaN   \n",
@@ -463,12 +464,12 @@
        "1             True      True      NaN         NaN         NaN     True  \n",
        "2             True      True      NaN         NaN         NaN     True  \n",
        "3             True      True      NaN        True         NaN      NaN  \n",
-       "4             True      True      NaN         NaN         NaN      NaN  \n",
+       "4              NaN       NaN      NaN         NaN         NaN      NaN  \n",
        "\n",
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
